TAG: seqcacheload-6-0-19-1
TAG: seqcacheload-6-0-18-4
TAG: seqcacheload-6-0-18-3
TAG: seqcacheload-6-0-18-2
TAG: seqcacheload-6-0-18-1
DATE: 03/24/2022, 03/30/2022, 04/11/2022
STAFF: lec
wts2-813/cre2022/Regulatory Features Ensembl & VISTA

seqmarker.py: added
175 | BioType VISTA
176 | BioType Ensembl Regulatory Feature

TAG: seqcacheload-6-0-16-1
DATE: 08/21/2020
STAFF: lec
TR13204/Infrastructure Release

TAG: seqcacheload-6-0-13-1
DATE: 09/04/2018
STAFF: lec  
CHANGES: TR12734/GenFevah merge
remove VEGA

TAG: seqcacheload-6-0-9-1
DATE: 04/04/2018
STAFF: sc
CHANGES: TR9835 Mice Crispies project
1) seqmarker.py - allow Genbank CON division seqs
    be chosen as rep genomic

TAG: seqcacheload-6-0-8-1
DATE: 02/15/2018
STAFF: lec 
CHANGES:
1) TR11083/Nomenclature/Marker schema merge

TAG: seqcacheload-6-0-7-1
DATE: 01/04/2017
STAFF: lec 
CHANGES:
1) TR12069/obsolete db.setAutoTranslate()

TAG: seqcacheload-6-0-4-1
DATE: 06/16/2016
STAFF: lec
CHANGES:
1) convert to git

TAG: seqcacheload-6-0-2-4
TAG: seqcacheload-6-0-2-3
TAG: seqcacheload-6-0-2-2
TAG: seqcacheload-6-0-2-1
DATE: 12/02/2015, 12/07/2015
STAFF: lec
CHANGES:
seqmarker.py
1) TR12070/12038/dots/dfci/nia
2) TR12070/12116/bitype conflicts

branch is :  tr12070-1
(made a mistake when making tr12070 branch)

TAG: seqcacheload-tr12070-1
DATE: 12/02/2015
STAFF: lec
CHANGES:
1) TR12070/12038/dots/dfci/nia

TAG: seqcacheload-tr12070-BP
DATE: 09/23/2015
STAFF: lec
CHANGES:
1) branch point tag for TR12070/12038

TAG: seqcacheload-6-0-0-6
DATE: 09/10/2015
STAFF: sc
CHANGES: TR12108 MCV/biotype mapping changes
1) Configuration.default - new mapping for all providers created by Sophia
   also one var per provider as length supported by linux
2) seqmarker.py - remove concatenation of multi vars per provider

TAG: seqcacheload-6-0-0-5
DATE: 08/18/2015
STAFF: lec 
CHANGES:
1) TR11750/seqdummy.py : removed "upper()" clause

TAG: seqcacheload-6-0-0-4
TAG: seqcacheload-6-0-0-3
TAG: seqcacheload-6-0-0-2
TAG: seqcacheload-6-0-0-1