@@ -1,3 +1,8 @@
+TAG: seqcacheload-6-0-19-2
+DATE: 05/18/2022, 03/30/2022, 04/11/2022
+STAFF: lec
+wts2-869/in last change, transcript/polypeptide accidentally removed
+
 TAG: seqcacheload-6-0-19-1
 TAG: seqcacheload-6-0-18-4
 TAG: seqcacheload-6-0-18-3
